# np-mcmc

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: gamma.py  normal.py
np_mcmc/: __init__.py  mcmc.py  types.py  utils.py
np_mcmc/kernels/: __init__.py  kernel.py  mala.py  metropolis_hastings.py
